# curso-fastapi-do-zero

./: pyproject.toml
fastapi_do_zero/: app.py
tests/: conftest.py  test_app.py  test_users.py
